Adding Okta Images

--- a/docs/integrations/SAML/okta.mdx
+++ b/docs/integrations/SAML/okta.mdx
@@ -37,27 +37,34 @@ Integrating Okta with Clerk allows you to use Okta as an identity provider for y
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta/create-enterprise-connection-clerk-dash"
+  src="/docs/images/integrations/saml/okta/create-enterprise-connection-clerk-dash.avif"
   alt=""
 />
 
-### Find the Azure Enterprise Applications 
+### Find the Okta Enterprise Applications 
 
 
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta"
+  src="/docs/images/integrations/saml/okta/find-create-okta-application.avif"
   alt=""
 />
 
-###  Create a new Azure Enterprise Application
+###  Create a new Okta Enterprise Application
 
 
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta"
+  src="/docs/images/integrations/saml/okta/choose-saml-in-app-create.avif"
+  alt=""
+/>
+
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/saml/okta/.avif"
   alt=""
 />
 
@@ -66,34 +73,34 @@ Integrating Okta with Clerk allows you to use Okta as an identity provider for y
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta"
+  src="/docs/images/integrations/saml/okta/.avif"
   alt=""
 />
 
 #### Assign Selected User or Group
 
-<Images width={3024} height={1652} src="/docs/images/integrations/saml/okta" alt="" />
+<Images width={3024} height={1652} src="/docs/images/integrations/saml/okta/.avif" alt="" />
 
 ### Find SSO Setup
 
 <Images
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta"
+  src="/docs/images/integrations/saml/okta/.avif"
   alt=""
 />
 
 
 ### Basic SAML Configuration
 
-<Images width={3024} height={1652} src="/docs/images/integrations/saml/okta" alt="" />
+<Images width={3024} height={1652} src="/docs/images/integrations/saml/okta/.avif" alt="" />
 
 #### Clerk Reference for Basic SAML Configuration
 
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta"
+  src="/docs/images/integrations/saml/okta/.avif"
   alt=""
 />
 
@@ -102,7 +109,7 @@ Integrating Okta with Clerk allows you to use Okta as an identity provider for y
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta"
+  src="/docs/images/integrations/saml/okta/.avif"
   alt="Enable the connection in the Clerk Dashboard"
 />
 
