More screenshots for Okta

--- a/docs/integrations/SAML/okta.mdx
+++ b/docs/integrations/SAML/okta.mdx
@@ -61,35 +61,36 @@ Integrating Okta with Clerk allows you to use Okta as an identity provider for y
   alt=""
 />
 
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/integrations/saml/okta/.avif"
-  alt=""
-/>
-
-###  Find Add User or Group & Assign
+### Find Okta Browser Plugin
 
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta/.avif"
+  src="/docs/images/integrations/saml/okta/find-okta-browser-plugin.avif"
   alt=""
 />
 
-#### Assign Selected User or Group
+#### Give the Application a Name
 
-<Images width={3024} height={1652} src="/docs/images/integrations/saml/okta/.avif" alt="" />
+<Images width={3024} height={1652} src="/docs/images/integrations/saml/okta/name-okta-app.avif" alt="" />
 
-### Find SSO Setup
+### Find SAML Settings
 
 <Images
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta/.avif"
+  src="/docs/images/integrations/saml/okta/saml-settings-okta-side.avif"
   alt=""
 />
 
+#### Clerk Reference for SAML Settings
+
+<Images
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/saml/okta/clerk-side-saml-config-urls.avif"
+  alt=""
+/>
 
 ### Basic SAML Configuration
 
