add simple example explanations

--- a/docs/references/javascript/user/create-metadata.mdx
+++ b/docs/references/javascript/user/create-metadata.mdx
@@ -33,6 +33,8 @@ function createEmailAddress: (params: CreateEmailAddressParams) => Promise<Email
 
 ### `createEmailAddress()` example
 
+The following example adds `test@test.com` as an email address for the user. If the user is not signed in, the user will be prompted to sign in.
+
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
@@ -135,6 +137,8 @@ function createPhoneNumber: (params: CreatePhoneNumberParams) => Promise<PhoneNu
 
 ### `createPhoneNumber()` example
 
+The following example adds `15551234567` as a phone number for the user. If the user is not signed in, the user will be prompted to sign in.
+
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
@@ -236,6 +240,8 @@ function createWeb3Wallet: (params: CreateWeb3WalletParams) => Promise<Web3Walle
 | `Promise<Web3Wallet>` | This method returns a `Promise` which resolves to the [`Web3Wallet`][web3-ref] created for the user. |
 
 ### `createWeb3Wallet()` example
+
+The following example adds `0x0123456789ABCDEF0123456789ABCDEF01234567` as a web3 wallet for the user. If the user is not signed in, the user will be prompted to sign in.
 
 <InjectKeys>
 
