Apply suggestions from code review
Co-authored-by: Jeff Escalante <jescalan@users.noreply.github.com>
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -118,7 +118,8 @@ Select your preferred router below to learn how to make this data available acro
 Now that Clerk is installed and mounted in your application, you can decide which pages are public and which should require authentication to access:
 
 1. Create a `middleware.ts` file at the root of your project, or in your `src/` directory if you have one.
-1. In your `middleware.ts`, export Clerk's [`authMiddleware()`](https://clerk.com/docs/references/nextjs/auth-middleware) helper. This helper enables authentication and blocks access for signed out visitors on routes that your middleware runs on.
+1. In your `middleware.ts` file, export Clerk's [`authMiddleware()`](https://clerk.com/docs/references/nextjs/auth-middleware) helper. This helper enables authentication and blocks access for signed out visitors on routes that your middleware runs on.
+
 
     Next.js middleware only runs on routes specified with [`matcher`](https://nextjs.org/docs/app/building-your-application/routing/middleware#matcher). Add the following code to your `middleware.ts` to protect your routes:
 
@@ -138,8 +139,9 @@ Now that Clerk is installed and mounted in your application, you can decide whic
 
     export const config = {
       matcher: [
-        // 1. Exclude files with a "." followed by an extension, which are typically static files.
-        // 2. Exclude files in the _next directory, which are Next.js internals.
+        // Exclude files with a "." followed by an extension, which are typically static files.
+        // Exclude files in the _next directory, which are Next.js internals.
+
         "/((?!.+\\.[\\w]+$|_next).*)",
         // Re-include any files in the api or trpc folders that might have an extension
         "/(api|trpc)(.*)"
