Add null assertion

--- a/docs/integrations/databases/supabase.mdx
+++ b/docs/integrations/databases/supabase.mdx
@@ -202,8 +202,8 @@ The following steps will show you how to access content from your Supabase table
 
     function createClerkSupabaseClient() {
       return createClient(
-        process.env.NEXT_PUBLIC_SUPABASE_URL ?? "",
-        process.env.NEXT_PUBLIC_SUPABASE_KEY ?? "",
+        process.env.NEXT_PUBLIC_SUPABASE_URL!,
+        process.env.NEXT_PUBLIC_SUPABASE_KEY!,
         {
           global: {
             // Get the Supabase token with a custom fetch method
@@ -242,8 +242,8 @@ The following steps will show you how to access content from your Supabase table
 
     function createClerkSupabaseClient() {
       return createClient(
-        process.env.NEXT_PUBLIC_SUPABASE_URL ?? "",
-        process.env.NEXT_PUBLIC_SUPABASE_KEY ?? "",
+        process.env.NEXT_PUBLIC_SUPABASE_URL!,
+        process.env.NEXT_PUBLIC_SUPABASE_KEY!,
         {
           global: {
             // Get the Supabase token with a custom fetch method
@@ -282,8 +282,8 @@ The following steps will show you how to access content from your Supabase table
 
     function createClerkSupabaseClient() {
       return createClient(
-        process.env.REACT_APP_SUPABASE_URL ?? "",
-        process.env.REACT_APP_SUPABASE_KEY ?? "",
+        process.env.REACT_APP_SUPABASE_URL!,
+        process.env.REACT_APP_SUPABASE_KEY!,
         {
           global: {
             // Get the Supabase token with a custom fetch method
@@ -480,8 +480,8 @@ The following steps will show you how to access content from your Supabase table
 
     function createClerkSupabaseClient() {
       return createClient(
-        process.env.NEXT_PUBLIC_SUPABASE_URL ?? "",
-        process.env.NEXT_PUBLIC_SUPABASE_KEY ?? "",
+        process.env.NEXT_PUBLIC_SUPABASE_URL!,
+        process.env.NEXT_PUBLIC_SUPABASE_KEY!,
         {
           global: {
             // Get the Supabase token with a custom fetch method
@@ -564,8 +564,8 @@ The following steps will show you how to access content from your Supabase table
 
     function createClerkSupabaseClient() {
       return createClient(
-        process.env.NEXT_PUBLIC_SUPABASE_URL ?? "",
-        process.env.NEXT_PUBLIC_SUPABASE_KEY ?? "",
+        process.env.NEXT_PUBLIC_SUPABASE_URL!,
+        process.env.NEXT_PUBLIC_SUPABASE_KEY!,
         {
           global: {
             // Get the Supabase token with a custom fetch method
@@ -648,8 +648,8 @@ The following steps will show you how to access content from your Supabase table
 
     function createClerkSupabaseClient() {
       return createClient(
-        process.env.REACT_APP_SUPABASE_URL ?? "",
-        process.env.REACT_APP_SUPABASE_KEY ?? "",
+        process.env.REACT_APP_SUPABASE_URL!,
+        process.env.REACT_APP_SUPABASE_KEY!,
         {
           global: {
             // Get the Supabase token with a custom fetch method
