add necessary comments

--- a/docs/references/javascript/user/create-metadata.mdx
+++ b/docs/references/javascript/user/create-metadata.mdx
@@ -71,6 +71,8 @@ if (clerk.user) {
 ```html filename="index.html"
   <div id="app"></div>
 
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
   <script
     async
     crossorigin="anonymous"
@@ -175,6 +177,8 @@ if (clerk.user) {
 ```html filename="index.html"
   <div id="app"></div>
 
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
   <script
     async
     crossorigin="anonymous"
@@ -279,6 +283,8 @@ if (clerk.user) {
 ```html filename="index.html"
   <div id="app"></div>
 
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
   <script
     async
     crossorigin="anonymous"
@@ -434,6 +440,8 @@ The following example demonstrates how to add a Notion account as an external ac
     </p>
     <button id="add-notion">Add Notion as a social connection</button>
 
+    <!-- Initialize Clerk with your
+    Clerk publishable key and Frontend API URL -->
     <script
       async
       crossorigin="anonymous"
