DOCS-5319 Add missing methods to User object; add OrganizationList to Clerk class (#793)

--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -62,7 +62,7 @@ Updates the user's attributes. Use this method to save information you collected
 
 The appropriate settings must be enabled in the Clerk Dashboard for the user to be able to update their attributes. For example, if you want to use the `update({ firstName })` method, you must enable the **Name** setting. It can be found in the the Clerk Dashboard under **User & Authentication > Email, Phone, Username > [Personal information](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username).**
 
-```typescript
+```js
 function update: (params: UpdateUserParams) => Promise<User>;
 ```
 
@@ -79,13 +79,13 @@ All props below are optional.
 | `primaryEmailAddressId` | `string` | The unique identifier for the [`EmailAddress`][email-ref] that the user has set as primary. |
 | `primaryPhoneNumberId` | `string` | The unique identifier for the [`PhoneNumber`][phone-ref] that the user has set as primary. |
 | `primaryWeb3WalletId` | `string` | The unique identifier for the [`Web3Wallet`][web3-ref] that the user signed up with. |
-| `unsafeMetadata` | `{[string]: any} \| null` | Metadata that can be read and set from the Frontend API. One common use case for this attribute is to implement custom fields that will be attached to the `User` object.<br />Please note that there is also an `unsafeMetadata` attribute in the [`SignUp`](/docs/references/javascript/sign-up/sign-up) object. The value of that field will be automatically copied to the user's unsafe metadata once the sign up is complete. |
+| `unsafeMetadata` | `{[string]: any} \| null` | Metadata that can be read and set from the Frontend API. One common use case for this attribute is to implement custom fields that will be attached to the `User` object.<br />Updating this value overrides the previous value; it does not merge. To perform a merge, you can pass something like `{ …user.unsafeMetadata, …newData }` to this parameter. |
 
 #### `update()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<User\></code> | This method returns a `Promise` which resolves with the current `User` object. |
+| `Promise<User>` | This method returns a `Promise` which resolves with the current `User` object. |
 
 #### `update()` example
 
@@ -93,58 +93,44 @@ In the following example, the user's first name is updated to "Test".
 
 <InjectKeys>
 
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {17}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {16}
   import Clerk from '@clerk/clerk-js';
 
   // Initialize Clerk with your Clerk publishable key
-  const clerk = new Clerk(`{{pub_key}}`);
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
   if (!clerk.user) {
-    // Selects for <div id="app"> and adds a <div id="sign-in"> to it
-    document.querySelector<HTMLDivElement>(
-      "#app"
-    )!.innerHTML = `<div id="sign-in"></div>`;
+    document.getElementById("app").innerHTML = `
+      <div id="sign-in"></div>
+    `;
 
-    const signInComponent = document.querySelector<HTMLDivElement>("#sign-in")!;
+    const signInDiv = document.getElementById("sign-in");
 
-    clerk.mountSignIn(signInComponent, {});
+    clerk.mountSignIn(signInDiv);
   } else {
     await clerk.user.update({ firstName: "Test" });
   }
   ```
 
-  ```html {26}
+  ```html filename="index.html" {14}
   <script>
-    // Get your publishable key and frontend API URL from the Clerk Dashboard
-    const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApi = 'https://[your-domain].clerk.accounts.dev';
-    const version = '@latest'; // Set to appropriate version
+    window.addEventListener('load', async function () {
+      await Clerk.load();
 
-    // Creates asynchronous script
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApi);
-    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
-    script.async = true;
-    script.src = `${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+      if (!Clerk.user) {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
 
-    // Adds listener to initialize ClerkJS after it's loaded
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
+        const signInDiv = document.getElementById("sign-in");
 
-      if (!window.Clerk.user) {
-        // Selects for <div id="app"> and adds a <div id="sign-in"> to it
-        document.querySelector("#app").innerHTML = `<div id="sign-in"></div>`;
-
-        const signInComponent = document.querySelector("#sign-in");
-
-        window.Clerk.mountSignIn(signInComponent, {});
+        Clerk.mountSignIn(signInDiv);
       } else {
-        await window.Clerk.user.update({ firstName: "Test" })
+        await Clerk.user.update({ firstName: "Test" })
       }
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
@@ -155,7 +141,7 @@ In the following example, the user's first name is updated to "Test".
 
 Deletes the current user.
 
-```typescript
+```js
 function delete: () => Promise<void>;
 ```
 
@@ -163,58 +149,44 @@ function delete: () => Promise<void>;
 
 <InjectKeys>
 
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {17}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {16}
   import Clerk from '@clerk/clerk-js';
 
   // Initialize Clerk with your Clerk publishable key
-  const clerk = new Clerk(`{{pub_key}}`);
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
   if (!clerk.user) {
-    // Selects for <div id="app"> and adds a <div id="sign-in"> to it
-    document.querySelector<HTMLDivElement>(
-      "#app"
-    )!.innerHTML = `<div id="sign-in"></div>`;
+    document.getElementById("app").innerHTML = `
+      <div id="sign-in"></div>
+    `;
 
-    const signInComponent = document.querySelector<HTMLDivElement>("#sign-in")!;
+    const signInDiv = document.getElementById("sign-in");
 
-    clerk.mountSignIn(signInComponent, {});
+    clerk.mountSignIn(signInDiv);
   } else {
     await clerk.user.delete();
   }
   ```
 
-  ```html {26}
+  ```html filename="index.html" {14}
   <script>
-    // Get your publishable key and frontend API URL from the Clerk Dashboard
-    const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApi = 'https://[your-domain].clerk.accounts.dev';
-    const version = '@latest'; // Set to appropriate version
+    window.addEventListener('load', async function () {
+      await Clerk.load();
 
-    // Creates asynchronous script
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApi);
-    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
-    script.async = true;
-    script.src = `${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+      if (!Clerk.user) {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
 
-    // Adds listener to initialize ClerkJS after it's loaded
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
+        const signInDiv = document.getElementById("sign-in");
 
-      if (!window.Clerk.user) {
-        // Selects for <div id="app"> and adds a <div id="sign-in"> to it
-        document.querySelector("#app").innerHTML = `<div id="sign-in"></div>`;
-
-        const signInComponent = document.querySelector("#sign-in");
-
-        window.Clerk.mountSignIn(signInComponent, {});
+        Clerk.mountSignIn(signInDiv);
       } else {
-        await window.Clerk.user.delete();
+        await Clerk.user.delete();
       }
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
@@ -225,7 +197,7 @@ function delete: () => Promise<void>;
 
 Adds the user's profile image or replaces it if one already exists. This method will upload an image and associate it with the user.
 
-```typescript
+```js
 function setProfileImage: (params: SetProfileImageParams) => Promise<ImageResource>;
 ```
 
@@ -249,11 +221,53 @@ function setProfileImage: (params: SetProfileImageParams) => Promise<ImageResour
 | `name` | `string \| null` | The name of the image. |
 | `publicUrl` | `string \| null` | The publically accessible url for the image. |
 
+### `reload()`
+
+Reloads the user's data from Clerk's API. This method is useful when you want to refresh the user's data after performing some form of mutation.
+
+```js
+function reload: (p?: ClerkResourceReloadParams) => Promise<this>;
+```
+
+#### `ClerkResourceReloadParams`
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `rotatingTokenNonce?` | `string` | A nonce to use for rotating the user's token. Used in native application OAuth flows to allow the native client to update its JWT once despite changes in its rotating token. |
+
+#### `reload()` example
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js"
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  await clerk.user.reload();
+  ```
+
+  ```html filename="index.html"
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      await Clerk.user.reload();
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
 ### `getSessions()`
 
 Retrieves all **active** sessions for this user. This method uses a cache so a network request will only be triggered only once.
 
-```typescript
+```js
 function getSessions: () => Promise<SessionWithActivities[]>;
 ```
 
@@ -261,64 +275,50 @@ function getSessions: () => Promise<SessionWithActivities[]>;
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[SessionWithActivities](/docs/references/javascript/session-with-activities)[]\></code> | This method returns a `Promise` which resolves with an array of `SessionWithActivities` objects. |
+| `Promise<SessionWithActivities[]>` | This method returns a `Promise` which resolves with an array of [`SessionWithActivities`](/docs/references/javascript/session-with-activities) objects. |
 
 #### `getSessions()` example
 
 <InjectKeys>
 
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {17}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {16}
   import Clerk from '@clerk/clerk-js';
 
   // Initialize Clerk with your Clerk publishable key
-  const clerk = new Clerk(`{{pub_key}}`);
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
   if (!clerk.user) {
-    // Selects for <div id="app"> and adds a <div id="sign-in"> to it
-    document.querySelector<HTMLDivElement>(
-      "#app"
-    )!.innerHTML = `<div id="sign-in"></div>`;
+    document.getElementById("app").innerHTML = `
+      <div id="sign-in"></div>
+    `;
 
-    const signInComponent = document.querySelector<HTMLDivElement>("#sign-in")!;
+    const signInDiv = document.getElementById("sign-in");
 
-    clerk.mountSignIn(signInComponent, {});
+    clerk.mountSignIn(signInDiv);
   } else {
     await clerk.user.getSessions();
   }
   ```
 
-  ```html {26}
+  ```html filename="index.html" {14}
   <script>
-    // Get your publishable key and frontend API URL from the Clerk Dashboard
-    const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApi = 'https://[your-domain].clerk.accounts.dev';
-    const version = '@latest'; // Set to appropriate version
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
-    // Creates asynchronous script
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApi);
-    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
-    script.async = true;
-    script.src = `${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+      if (!Clerk.user) {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
 
-    // Adds listener to initialize ClerkJS after it's loaded
-    script.addEventListener("load", async function () {
-      await window.Clerk.load();
+        const signInDiv = document.getElementById("sign-in");
 
-      if (!window.Clerk.user) {
-        // Selects for <div id="app"> and adds a <div id="sign-in"> to it
-        document.querySelector("#app").innerHTML = `<div id="sign-in"></div>`;
-
-        const signInComponent = document.querySelector("#sign-in");
-
-        window.Clerk.mountSignIn(signInComponent, {});
+        Clerk.mountSignIn(signInDiv);
       } else {
-        await window.Clerk.user.getSessions();
+        await Clerk.user.getSessions();
       }
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
@@ -329,7 +329,7 @@ function getSessions: () => Promise<SessionWithActivities[]>;
 
 A check whether or not the given resource is the primary identifier for the user.
 
-```typescript
+```js
 function isPrimaryIdentification: (ident: EmailAddressResource | PhoneNumberResource | Web3WalletResource) => boolean;
 ```
 
@@ -338,6 +338,215 @@ function isPrimaryIdentification: (ident: EmailAddressResource | PhoneNumberReso
 | Name | Type | Description |
 | --- | --- | --- |
 | `ident` | [`EmailAddress`][email-ref] \| [`PhoneNumber`][phone-ref] \| [`Web3Wallet`][web3-ref] | The resource checked against the user to see if it is the primary identifier. |
+
+### `getOrganizationInvitations()`
+
+Retrieves a list of organization invitations for the user.
+
+```js
+function getOrganizationInvitations: (params?: GetUserOrganizationInvitationsParams) => Promise<ClerkPaginatedResponse<UserOrganizationInvitation>>;
+```
+
+### `GetUserOrganizationInvitationsParams`
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `initialPage?` | `number` | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. |
+| `pageSize?` | `number` | A number that indicates the maximum number of results that should be returned for a specific page. |
+| `status?` | `'pending' \| 'accepted' \| 'revoked'` | The status an invitation can have. |
+
+#### `getOrganizationInvitations()` returns
+
+| Type | Description |
+| --- | --- |
+| `Promise<ClerkPaginatedResponse<UserOrganizationInvitation>>` | This method returns a `Promise` which resolves to a [ClerkPaginatedResponse](/docs/references/javascript/types/clerk-paginated-response) of `UserOrganizationInvitation` objects. |
+
+#### `getOrganizationInvitations()` example
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {16}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  if (!clerk.user) {
+    document.getElementById("app").innerHTML = `
+      <div id="sign-in"></div>
+    `;
+
+    const signInDiv = document.getElementById("sign-in");
+
+    clerk.mountSignIn(signInDiv);
+  } else {
+    await clerk.user.getOrganizationInvitations();
+  }
+  ```
+
+  ```html filename="index.html" {14}
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      if (!Clerk.user) {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
+
+        const signInDiv = document.getElementById("sign-in");
+
+        Clerk.mountSignIn(signInDiv);
+      } else {
+        await Clerk.user.getOrganizationInvitations();
+      }
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+### `getOrganizationSuggestions()`
+
+Retrieves a list of organization suggestions for the user.
+
+```js
+function getOrganizationSuggestions: (params?: GetUserOrganizationSuggestionsParams) => Promise<ClerkPaginatedResponse<OrganizationSuggestion>>;
+```
+
+### `GetUserOrganizationInvitationsParams`
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `initialPage?` | `number` | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. |
+| `pageSize?` | `number` | A number that indicates the maximum number of results that should be returned for a specific page. |
+| `status?` | `'pending' \| 'accepted'` \| `['pending' \| 'accepted']` | The status an invitation can have. |
+
+#### `getOrganizationSuggestions()` returns
+
+| Type | Description |
+| --- | --- |
+| `Promise<ClerkPaginatedResponse<OrganizationSuggestion>>` | This method returns a `Promise` which resolves to a [ClerkPaginatedResponse](/docs/references/javascript/types/clerk-paginated-response) of `OrganizationSuggestion` objects. |
+
+#### `getOrganizationSuggestions()` example
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {16}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  if (!clerk.user) {
+    document.getElementById("app").innerHTML = `
+      <div id="sign-in"></div>
+    `;
+
+    const signInDiv = document.getElementById("sign-in");
+
+    clerk.mountSignIn(signInDiv);
+  } else {
+    await clerk.user.getOrganizationSuggestions();
+  }
+  ```
+
+  ```html filename="index.html" {14}
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      if (!Clerk.user) {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
+
+        const signInDiv = document.getElementById("sign-in");
+
+        Clerk.mountSignIn(signInDiv);
+      } else {
+        await Clerk.user.getOrganizationSuggestions();
+      }
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+### `getOrganizationMemberships()`
+
+Retrieves a list of organization memberships for the user.
+
+```js
+function getOrganizationMemberships: (params?: GetUserOrganizationMembershipParams) => Promise<ClerkPaginatedResponse<OrganizationMembershipResource>>;
+```
+
+### `GetUserOrganizationMembershipParams`
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `initialPage?` | `number` | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. |
+| `pageSize?` | `number` | A number that indicates the maximum number of results that should be returned for a specific page. |
+
+#### `getOrganizationMemberships()` returns
+
+| Type | Description |
+| --- | --- |
+| `Promise<ClerkPaginatedResponse<OrganizationSuggestion>>` | This method returns a `Promise` which resolves to a [ClerkPaginatedResponse](/docs/references/javascript/types/clerk-paginated-response) of `OrganizationMembership` objects. |
+
+#### `getOrganizationMemberships()` example
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {16}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  if (!clerk.user) {
+    document.getElementById("app").innerHTML = `
+      <div id="sign-in"></div>
+    `;
+
+    const signInDiv = document.getElementById("sign-in");
+
+    clerk.mountSignIn(signInDiv);
+  } else {
+    await clerk.user.getOrganizationMemberships();
+  }
+  ```
+
+  ```html filename="index.html" {14}
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      if (!Clerk.user) {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
+
+        const signInDiv = document.getElementById("sign-in");
+
+        Clerk.mountSignIn(signInDiv);
+      } else {
+        await Clerk.user.getOrganizationMemberships();
+      }
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
 
 ## Additional methods
 
