small fix for a broken anchor link

--- a/docs/components/customization/overview.mdx
+++ b/docs/components/customization/overview.mdx
@@ -682,7 +682,7 @@ This can be done with one of three different methods of styling:
 
 1. [Using global CSS styling](#global-css)
 2. [Passing custom CSS classes](#using-custom-css-classes)
-  * [Using Tailwind](#using-tailwind)
+  * [Using Tailwind](#use-tailwind-classes-to-style-clerk-components)
   * [Using CSS Modules](#using-css-modules)
 3. [Passing inline CSS to your Clerk options](#inline-css-objects)
 
