Finish rough outline of Okta and images components

--- a/docs/integrations/SAML/okta.mdx
+++ b/docs/integrations/SAML/okta.mdx
@@ -74,7 +74,7 @@ Integrating Okta with Clerk allows you to use Okta as an identity provider for y
 
 <Images width={3024} height={1652} src="/docs/images/integrations/saml/okta/name-okta-app.avif" alt="" />
 
-### Find SAML Settings
+### SAML Configuration
 
 <Images
   width={3024}
@@ -92,25 +92,44 @@ Integrating Okta with Clerk allows you to use Okta as an identity provider for y
   alt=""
 />
 
-### Basic SAML Configuration
+### Attribute Mapping in Okta to Clerk 
 
-<Images width={3024} height={1652} src="/docs/images/integrations/saml/okta/.avif" alt="" />
+You will want to add the following fields to the attribute mapping in Okta then proceed by clicking on "Next" to continue.
+<Images width={3024} height={1652} src="/docs/images/integrations/saml/okta/okta-attribute-mapping.avif" alt="" />
 
-#### Clerk Reference for Basic SAML Configuration
-
+Select "software vendor" as the application type and click "Finish" to complete the setup.
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta/.avif"
+  src="/docs/images/integrations/saml/okta/software-vendor.avif"
   alt=""
 />
+
+### Okta Metadata URL 
+
+Copy the metadata URL from Okta and 
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/saml/okta/okta-metadata-url.avif"
+  alt=""
+/>
+
+Paste it into the Clerk Dashboard and save changes to complete the setup
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/saml/okta/clerk-metadata-location.avif"
+  alt=""
+/>
+
 
 ### Enable the Connection in Clerk Dashboard
 
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta/.avif"
+  src="/docs/images/integrations/saml/okta/enable-connection.avif"
   alt="Enable the connection in the Clerk Dashboard"
 />
 
