Okta rough draft with AVIF image

--- a/docs/integrations/SAML/azure.mdx
+++ b/docs/integrations/SAML/azure.mdx
@@ -82,7 +82,13 @@ Find the "Add User or Group" button and click it.
 3. Click on the check box next to the user or group you want to assign.
 4. Click the "Select" button at the bottom of the page.
 5. Click the "Assign" button at the bottom of the page.
-<Images width={3024} height={1652} src="/docs/images/integrations/saml/azure/assign-user-to-app.avif" alt="Steps to assign User or Group to the Enterprise Azure Application" />
+
+<Images 
+width={3024} 
+height={1652} 
+src="/docs/images/integrations/saml/azure/assign-user-to-app.avif" 
+alt="Steps to assign User or Group to the Enterprise Azure Application" 
+/>
 
 ### Find SSO Setup
 
