--- a/docs/integrations/SAML/okta.mdx
+++ b/docs/integrations/SAML/okta.mdx
@@ -98,6 +98,7 @@ You will want to add the following fields to the attribute mapping in Okta then 
 <Images width={3024} height={1652} src="/docs/images/integrations/saml/okta/okta-attribute-mapping.avif" alt="" />
 
 Select "software vendor" as the application type and click "Finish" to complete the setup.
+
 <Images 
   width={3024}
   height={1652}
@@ -105,9 +106,30 @@ Select "software vendor" as the application type and click "Finish" to complete 
   alt=""
 />
 
+### Assign Users to the Application
+1. Navigate to the "Assignments" tab 
+2. Click on "Assign" and "Assign to People" or "Assign to Groups"
+
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/saml/okta/navigate-to-assignments.avif"
+  alt=""
+/>
+
+#### Find the User or Group to Assign 
+
+Once you have found the user or group you want to assign, click "Assign" to complete the process.
+<Images
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/saml/okta/assign-user.avif"
+  alt=""
+/>
+
 ### Okta Metadata URL 
 
-Copy the metadata URL from Okta and 
+Copy the Okta Metadata URL from Okta
 <Images 
   width={3024}
   height={1652}
@@ -115,7 +137,8 @@ Copy the metadata URL from Okta and
   alt=""
 />
 
-Paste it into the Clerk Dashboard and save changes to complete the setup
+Paste the Okta Metadata URL into the Clerk Dashboard and save changes to complete the setup.
+
 <Images 
   width={3024}
   height={1652}
@@ -126,6 +149,7 @@ Paste it into the Clerk Dashboard and save changes to complete the setup
 
 ### Enable the Connection in Clerk Dashboard
 
+Once you have pasted the Okta Metadata URL into the Clerk Dashboard, you will need to enable the connection to complete the setup.
 <Images 
   width={3024}
   height={1652}
